Fix padding and spacing of icon on alerts

--- a/resources/assets/css/components/pieces/top_banner.less
+++ b/resources/assets/css/components/pieces/top_banner.less
@@ -22,7 +22,7 @@
       .flexy(row, space-between);
 
       > div > .banner-alert-icon {
-        margin-right: 11px;
+        margin-right: 1em;
       }
 
       > .banner-dismiss {
