--- a/resources/assets/css/inner/alerts.less
+++ b/resources/assets/css/inner/alerts.less
@@ -2,9 +2,8 @@
   margin-bottom: 15px;
 
   .alert-icon {
-    padding-right: ((2 / 3) * 15px);
     margin-left: 0;
-    margin-right: 10px;
+    margin-right: 1em;
 
     &.warning {
         color: @yellow;
@@ -57,10 +56,8 @@
     background-color: @redLightest;
     border: 1px solid fade(@black, 10%);
     min-height: 38px;
-    padding: 8px 10px 4px 10px;
+    padding: 8px 1em;
   }
-
-
 
   &.offer {
     position: relative;
